AUV_ws/log/build_2020-10-15_18-50-53/gate_detection/stderr.log
  File "/home/fatma/AUV_ws/install/gate_detection/lib/python3.6/site-packages/gate_detection/server_node.py", line 217
    )
    ^
SyntaxError: invalid syntax

